Revert "fix: broken styles in program cert print media (#1800)" (#1810)
This reverts commit f1c64e8dc2536f02be104b5fac52eaff0a7dd13e.

--- a/credentials/apps/credentials_theme_openedx/static/sass/_print-rendering.scss
+++ b/credentials/apps/credentials_theme_openedx/static/sass/_print-rendering.scss
@@ -35,8 +35,7 @@
           .accomplishment-title {
             @include make-col-ready();
             @include make-col(8);
-            margin-bottom: 0;
-            margin-top: $spacer * .5;
+            @extend %mt-2, %mb-0;
             display: inline-block;
             vertical-align: middle;
           }
@@ -86,11 +85,11 @@
         }
 
         .signatory {
-          margin: 0;
-          margin-bottom: $spacer * .5;
+          @extend %m-0, %mb-2;
           width: 100%;
+
           &:last-child {
-            margin-bottom: 0;
+            @extend %mb-0;
           }
         }
       }
@@ -146,11 +145,11 @@
   .wrapper-accomplishment-statement {
 
     .accomplishment-recipient {
-      @include h2;
+      @extend %h2;
     }
 
     .accomplishment-course, .accomplishment-program {
-      @include h3;
+      @extend %h3;
     }
 
     .copy {
@@ -164,8 +163,7 @@
     .accomplishment-program,
     .accomplishment-summary,
     .accomplishment-statement-detail {
-      margin: 0;
-      margin-bottom: $spacer * 1.5;
+      @extend %m-0, %mb-4;
     }
   }
 
